[Media, Video] Enable the video track for a new renderer.

Video track needs to be reenabled before the new renderer is
created so that the callbacks attach properly. For that, add
two new callbacks to PipelineController for when the pipeline
is about to resume and is resumed.

This adds a potential problem when the video is shown or hidden
in between the two events. So don't change the video track if
the pipeline is resuming or seeking but check for the necessary
conditions in the resumed callback.

BUG=678374
TEST=media_[blink_]unittests + manual testing

Review-Url: https://codereview.chromium.org/2618883002
Cr-Commit-Position: refs/heads/master@{#443404}

Former-commit-id: 2135a640a1547f44b62828bac84dc713d39652c6