media/filters/pipeline_controller.h
@@ -41,19 +41,25 @@ class MEDIA_EXPORT PipelineController {
   using RendererFactoryCB = base::Callback<std::unique_ptr<Renderer>(void)>;
   using SeekedCB = base::Callback<void(bool time_updated)>;
   using SuspendedCB = base::Callback<void()>;
+  using BeforeResumeCB = base::Callback<void()>;
+  using ResumedCB = base::Callback<void()>;
 
   // Construct a PipelineController wrapping |pipeline_|. |pipeline_| must
   // outlive the resulting PipelineController. The callbacks are:
   //   - |renderer_factory_cb| is called by PipelineController to create new
   //     renderers when starting and resuming.
   //   - |seeked_cb| is called upon reaching a stable state if a seek occured.
-  //   - |suspended_cb| is called immediately after suspendeding.
+  //   - |suspended_cb| is called immediately after suspending.
+  //   - |before_resume_cb| is called immediately before resuming.
+  //   - |resumed_cb| is called immediately after resuming.
   //   - |error_cb| is called if any operation on |pipeline_| does not result
   //     in PIPELINE_OK or its error callback is called.
   PipelineController(Pipeline* pipeline,
                      const RendererFactoryCB& renderer_factory_cb,
                      const SeekedCB& seeked_cb,
                      const SuspendedCB& suspended_cb,
+                     const BeforeResumeCB& before_resume_cb,
+                     const ResumedCB& resumed_cb,
                      const PipelineStatusCB& error_cb);
   ~PipelineController();
 
@@ -122,6 +128,12 @@ class MEDIA_EXPORT PipelineController {
 
   // Called immediately when |pipeline_| completes a suspend operation.
   SuspendedCB suspended_cb_;
+
+  // Called immediately before |pipeline_| starts a resume operation.
+  ResumedCB before_resume_cb_;
+
+  // Called immediately when |pipeline_| completes a resume operation.
+  ResumedCB resumed_cb_;
 
   // Called immediately when any operation on |pipeline_| results in an error.
   PipelineStatusCB error_cb_;
